<resources>
    <string name="app_name">MyMovies</string>
    <string name="api_key">387932108665810339b6e5dc0e02c04a</string>
    <!--LoginFragment-->
    <string name="username_hint">Usuário</string>
    <string name="password_hint">Senha</string>
    <string name="login_btn_label">Entrar</string>
    <string name="signup_btn_label">Cadastre-se</string>
    <!--end-->

    <!--SignupFragment-->
    <string name="complete_register_btn_label">Cadastrar</string>
    <string name="new_username_hint">Novo Usuário</string>
    <string name="new_password_hint">Sua nova senha</string>
    <string name="new_password_confirmation_hint">Confirme sua nova senha</string>
    <string name="invalid_password">Senhas não conferem</string>
    <!--end-->

    <!--HomeFragment-->
    <string name="movie_list_menu_label">Filmes</string>
    <string name="favorites_list_menu_label">Favoritos</string>
    <!--end-->
</resources>
